# geovista-jav-2026

./: .envrc  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  SG.py  pyproject.toml  req.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci-auto-approve.yml  ci-locks.yml  ci-wheels.yml
raikoke/: README.md  main.py  slide.py
render/: req.txt  trame-gv.py
requirements/: geojav.yml  pypi-core.txt  pypi-optional-all.txt  pypi-optional-devs.txt
requirements/locks/: README.md  geojav-py313_linux-64_conda_spec.txt  geojav-py313_linux-64_conda_spec.yml  geojav_linux-64_conda_spec.txt  geojav_linux-64_conda_spec.yml  geojav_osx-64_conda_spec.txt  geojav_win-64_conda_spec.txt  lock2yaml.py
src/geojav/: __init__.py
src/geojav/cache/: registry.txt
src/geojav/raikoke/: README.md  clip  clip2  downwind_clip  fig1  met  no_threshold  per_cs  raikoke.py  series_start  threshold
src/geojav/raikoke/data/: __init__.py  unpack.py
src/geojav/raikoke/images/: generate_inset.py
src/geojav/reykjanes/: README.md  reykjanes.py
src/geojav/reykjanes/data/: unpack.py
src/geojav/reykjanes/images/: generate_inset.py
